# include qt4
FIND_PACKAGE (Qt4 REQUIRED)
INCLUDE_DIRECTORIES(${QT_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR})
# enable warning
ADD_DEFINITIONS ("-g -Wall -DDEBUG")
#ADD_DEFINITIONS (-DG_DISABLE_ASSERT)
# set targets
SET(MM_SRCS main.cpp)
QT4_AUTOMOC(${MDRun_SRCS})
ADD_EXECUTABLE(mingmu ${MM_SRCS})
TARGET_LINK_LIBRARIES(mingmu ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
INSTALL (TARGETS mingmu DESTINATION bin)
